<resources>
    <string name="app_name">BPHADNS</string>
    <string name="signUp">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="process">Process Data</string>
    <string name="anomaly">Anomaly Detected</string>
    <string name="systemName">BLOOD PRESSURE AND HEARTBEAT ANOMALY DETECTION AND NOTIFICATION SYSTEM</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="userName">User Fullname</string>
    <string name="docName">Doctor\'s Name</string>
    <string name="docPh">Doctor\'s Phone Number</string>
    <string name="enterPressure">Enter Your Blood Pressure</string>
    <string name="systolic">Systolic Pressure</string>
    <string name="diastolic">Diastolic Pressure</string>
    <string name="saveDoc">Save Info</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Registered Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="acc_settings">Settings</string>
    <string name="bluetooth">Setup bluetooth connection</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered !</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Return]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Did you forget your  password?</string>
    <string name="forgot_password_msg">Please provide your Email Id  for the passsword reset instructions to be sent.</string>
    <string name="email_id">Email ID</string>
    <string name="settings">Your Account Setings</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_failure">Registered Not Successfull</string>
    <string name="doc_info">Doctor Information</string>
    <string name="turnOnBlue">Turn on/off Bluetooth</string>
    <string name="searchDevice">Search Devices</string>
    <string name="blueSettngs">Bluetooth Settings</string>
    <string name="makeDiscoverable">Make Discoverable</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_new_devices">New Devices Devices</string>

</resources>
