<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginLeft="145dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_info"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/docInfo"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        />


    <EditText
        android:id="@+id/doctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/docName"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/docPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/docPh"
        android:inputType="phone"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/saveDocDetails"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:background="@drawable/btneditor"
        android:shadowColor="#07FA81"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/saveDoc"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="125dp"/>


</LinearLayout>