<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    tools:context=".BluetoothConnection.BluetoothConnection">

   <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="10dp"
    android:text="@string/blueSettngs"
    android:textColor="@android:color/white"
    android:textSize="20dp"
    android:textStyle="bold|italic"
    tools:ignore="SpUsage" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bluetoothSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btneditor"
            android:text="@string/turnOnBlue"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/SearchDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btneditor"
            android:text="@string/searchDevice"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btneditor"
            android:text="@string/makeDiscoverable"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        tools:ignore="SpUsage"
        android:id="@+id/pairedDevices"
        android:text="@string/title_paired_devices"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        tools:ignore="SpUsage"
        android:id="@+id/newDevices"
        android:text="@string/title_new_devices"
        android:visibility="gone" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="vertical" />
</LinearLayout>