<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context="com.example.saswat.mobileapp.Login.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/systemName"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginLeft="105dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="Email Address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/Login"
            android:layout_width="142dp"
            android:layout_height="40dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/btneditor"
            android:shadowColor="#07FA81"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />


        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:background="@null"
            android:text="@string/signUp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <!--<Button-->
        <!--android:id="@+id/login"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:layout_width="142dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:text="@string/anomaly"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:textSize="10sp"-->
        <!--android:layout_marginLeft="140dp"-->
        <!--android:background="@drawable/btneditor"-->
        <!--android:shadowColor="#07FA81"-->
        <!--android:shadowDx="0"-->
        <!--android:shadowDy="0"-->
        <!--android:shadowRadius="5"-->
        <!--/>-->

        <!--<com.google.android.gms.common.SignInButton-->
        <!--android:id="@+id/sign_in_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="120dp" />-->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="162dp" />
    </LinearLayout>
</RelativeLayout>
